# deadfoo-d

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
lib/deadfood/: database.cc  database.hh
lib/deadfood/binary/: get.hh  put.hh
lib/deadfood/core/: constraint.cc  constraint.hh  field.cc  field.hh  row.cc  row.hh  schema.cc  schema.hh
lib/deadfood/exec/: create_table.cc  create_table.hh  delete.cc  delete.hh  dml_util.cc  dml_util.hh  dql_util.cc  dql_util.hh  drop_table.cc  drop_table.hh  insert_into.cc  insert_into.hh  select.cc  select.hh  update.cc  update.hh
lib/deadfood/exec/select/: find_table_by_field.cc  find_table_by_field.hh
lib/deadfood/expr/: and_expr.cc  and_expr.hh  bin_bool_expr.cc  bin_bool_expr.hh  bool_expr.cc  bool_expr.hh  cmp_expr.cc  cmp_expr.hh  const_expr.cc  const_expr.hh  exists_expr.cc  exists_expr.hh  expr_convert.cc  expr_convert.hh  expr_tree.hh  field_expr.cc  field_expr.hh  iexpr.hh  insert_into_get_table_scan.cc  insert_into_get_table_scan.hh  is_expr.cc  is_expr.hh  math_expr.cc  math_expr.hh  not_expr.cc  not_expr.hh
lib/deadfood/expr/scan_selector/: iscanselector.hh  no_scan_selector.cc  no_scan_selector.hh  simple_scan_selector.cc  simple_scan_selector.hh
lib/deadfood/lex/: lex.cc  lex.hh  lex_util.cc  lex_util.hh
lib/deadfood/parse/: create_table_parser.cc  create_table_parser.hh  delete_parser.cc  delete_parser.hh  drop_table_parser.cc  drop_table_parser.hh  expr_tree_parser.cc  expr_tree_parser.hh  insert_parser.cc  insert_parser.hh  parse_util.hh  parser_error.hh  select_parser.cc  select_parser.hh  select_parser_fwd.hh  update_parser.cc  update_parser.hh  util.hh
lib/deadfood/query/: create_table_query.cc  create_table_query.hh  delete_query.hh  insert_query.hh  select_query.hh  update_query.hh
lib/deadfood/scan/: extend_scan.cc  extend_scan.hh  iscan.hh  left_join_scan.cc  left_join_scan.hh  product_scan.cc  product_scan.hh  project_scan.cc  project_scan.hh  rename_scan.cc  rename_scan.hh  select_scan.cc  select_scan.hh  table_scan.cc  table_scan.hh
lib/deadfood/storage/: byte_buffer.cc  byte_buffer.hh  db_storage.cc  db_storage.hh  table_storage.cc  table_storage.hh
lib/deadfood/util/: is_number_t.hh  parse.hh  str.hh
tests/: CMakeLists.txt  main.cc
